--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ go:
 install:
   - go get -u github.com/golang/dep/cmd/dep
   - dep ensure
+  - go get golang.org/x/tools/cmd/goimports
 
 script:
   - ./.travis.goimports.sh
-  - go test -v ./...
+  - go test -bench=. -v ./...
