--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,4 @@ go:
   - tip
 
 install:
-  - go get -u github.com/golang/dep/cmd/dep
-  - dep ensure
-  - go get golang.org/x/tools/cmd/goimports
-
-script:
-  - ./.travis.goimports.sh
-  - go test -bench=. -v ./...
+  - make install
