--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: go
-
 os:
   - linux
   - osx
-
 sudo: false
-
 go:
-  - 1.9
-  - tip
-
-install:
-  - make install
+  - "1.10"
+  - "1.11"
+  - "tip"
+install: true
