--- a/.editorconfig
+++ b/.editorconfig
@@ -2,15 +2,10 @@ root = true
 
 [*]
 end_of_line = lf
-insert_final_newline = false
+insert_final_newline = true
 indent_size = 2
 indent_style = space
 
-[*.go]
+[{README.md,*.go}]
 indent_size = 8
-
-[Makefile]
-indent_size = 4
-
-[{Makefile,*.go}]
 indent_style = tab
